[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://motor.glb" type="PackedScene" id=2]
[ext_resource path="res://390787__mhad__engine-idle.wav" type="AudioStream" id=3]
[ext_resource path="res://70068__demarkracy__cardrifting.wav" type="AudioStream" id=4]

[sub_resource type="SphereShape" id=1]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.511364 ), 0.0, 0.0, 0, 0, Vector2( 0.0217391, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
linear_accel = -0.5
scale = 0.5
scale_random = 1.0
scale_curve = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=6]
params_diffuse_mode = 4

[sub_resource type="SphereMesh" id=3]
material = SubResource( 6 )
radius = 0.5
height = 1.0

[node name="Player" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="FollowCamera" type="ClippedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 3 )
fov = 90.0

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
attenuation_model = 2
unit_db = 1.0
unit_size = 10.0
autoplay = true

[node name="SkidSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
attenuation_model = 2
unit_size = 5.0
autoplay = true

[node name="TireSmoke" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.8 )
amount = 128
lifetime = 2.0
local_coords = false
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="motor" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="DummyCamera" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 3 )
